upload post's image + user's avatar and resize

--- a/config/locales/post.ru.yml
+++ b/config/locales/post.ru.yml
@@ -32,6 +32,7 @@ ru:
       post:
         title: Заголовок
         description: Описание тестового задания
+        image: Изображение
   helpers:
     submit:
       post:
